# stevens-hacs-backend-integrations

./: Makefile  conftest.py  pyproject.toml
changedetection.io/: search.py  test_search.py  watch.py  watch_test.py
changedetection.io/cassettes/: test_search_with_basic_query.yaml  test_search_with_partial_match.yaml  test_watch_uuid.yaml  test_watch_uuid_history_timestamp.yaml  test_watch_uuid_not_found.yaml
