[tool.poetry]
name = "stevens-hacs-backend-integrations"
version = "0.1.0"
description = "Backend integrations by Steven for HACS"
authors = ["Steven de Jong <steven@steven-dejong.nl>"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-vcr = "^1.0"

[tool.pytest.ini_options]
python_files = ["*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
